--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: Efim's Blog
 author: Efim Losev
 email: efimius@gmail.com
-description: Ideas, Thoughts, Updates
+description: >-
+  Ideas, Thoughts, Updates
 
 
 # Build settings
