--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Efim's Blog
 author: Efim Losev
 email: efimius@gmail.com
 description: >-
-  Ideas, Thoughts, Updates
+ "Efim Losev, Sys Admin. Ideas, Thoughts, Updates"
 
 
 # Build settings
