updating contact information

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Efim's Blog
 author: Efim Losev
 email: efimius@gmail.com
+github_user: efimlosev
 description: >-
  Efim Losev, Sys Admin. Ideas, Thoughts, Updates
 
