--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ collections:
     output: true
 author: Efim Losev
 email: efimius@gmail.com
-github_user: efimlosev
+github_username: efimlosev
 description: Efim Losev, Sys Admin. Ideas, Thoughts, Updates
 markdown: kramdown
 theme: minima
