--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,5 @@ github_username: efimlosev
 description: Efim Losev, Sys Admin. Ideas, Thoughts, Updates
 markdown: kramdown
 theme: minima
+google_analytics: UA-109652089-1
+
